Resolves: fdo#49178 CRASH when FILEOPEN particular RTF

(cherry picked from commit 104badf31c8a39994cadc460561bfa01e428b67b)

Signed-off-by: Miklos Vajna <vmiklos@suse.cz>
Signed-off-by: Caolán McNamara <caolanm@redhat.com>
Signed-off-by: Petr Mladek <pmladek@suse.cz>

Change-Id: Idd938980b91ec8b822a92dfd7013a20fe5b6f498